# messenger

./: .gitignore  CMakeLists.txt  Doxyfile  History.cpp  History.h  Message.cpp  Message.h  MsgClient.cpp  MsgClient.h  MsgServer.cpp  MsgServer.h  README.md  Session.cpp  Session.h  UserBase.cpp  UserBase.h  annotated.html  annotated_dup.js  classes.html  client.cpp  dir_d48a96a5f5e0c956db6fcdfc25ed7b44.html  dir_d48a96a5f5e0c956db6fcdfc25ed7b44.js  files.html  files_dup.js  functions.html  functions_eval.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.map  inherit_graph_0.md5  (+20 more)
.github/workflows/: release.yml
conio.h/: conio.h
d0/d30/: md_README.html
d0/d31/: UserBase_8h__incl.map  UserBase_8h__incl.md5
d0/d48/: client_8cpp__incl.map  client_8cpp__incl.md5
d0/d53/: Session_8h.html  Session_8h.js  Session_8h_source.html
d0/d58/: classUserBase.html  classUserBase.js
d0/d96/: MsgClient_8h__dep__incl.map  MsgClient_8h__dep__incl.md5
d1/d60/: classUserSession__inherit__graph.map  classUserSession__inherit__graph.md5
d1/de1/: classMessage-members.html
d2/d31/: Message_8cpp.html  Message_8cpp_source.html
d2/d5a/: classHistory.html  classHistory.js
d5/d5f/: conio_8h.js  (+2 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  defines_c.js  defines_d.js  defines_e.js  (+40 more)
(+97 files in other folders)
